apps/kube-prometheus-stack/basic-auth-securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: alertmanager-basic-auth
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: kube-prometheus-stack-alertmanager
  basicAuth:
    users:
      name: basic-auth
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-basic-auth
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: kube-prometheus-stack-prometheus
  basicAuth:
    users:
      name: basic-auth
